--- a/projects/demo/src/app/tooltips/tooltips-angular.html
+++ b/projects/demo/src/app/tooltips/tooltips-angular.html
@@ -90,7 +90,7 @@
 <div class="clr-example" style="margin-bottom: 96px">
   <clr-tooltip>
     <button clrTooltipTrigger class="btn btn-primary" aria-label="Uniq tooltip 8">
-      <cds-icon status="info" shape="info-standard" size="24"></cds-icon>
+      <cds-icon shape="info-standard" size="24"></cds-icon>
     </button>
     @if (true) {
     <clr-tooltip-content *clrIfOpen clrSize="lg">
@@ -107,7 +107,7 @@
     <button type="button" class="btn" clrDropdownTrigger aria-label="Uniq tooltip 9">Click Me!</button>
     <clr-dropdown-menu>
       <clr-tooltip>
-        <button type="button" clrDropdownItem clrTooltipTrigger>Option One</button>
+        <button clrDropdownItem clrTooltipTrigger>Option One</button>
         <clr-tooltip-content [clrSize]="'lg'">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias cumque enim fuga fugit impedit tempora
           tempore, voluptatibus. Consequuntur dicta distinctio et fugit, minima perferendis quas quod, recusandae sequi
