--- a/projects/demo/src/app/datagrid/density/density.html
+++ b/projects/demo/src/app/datagrid/density/density.html
@@ -82,6 +82,11 @@
     <clr-dg-action-overflow>
       <button class="action-item">Edit</button>
       <button class="action-item">Delete</button>
+      <button class="action-item">Change</button>
+      <button class="action-item">Manage</button>
+      <button class="action-item">Release</button>
+      <button disabled class="action-item">Turn ON</button>
+      <button class="action-item">Turn OFF</button>
     </clr-dg-action-overflow>
     }
     <clr-dg-cell>
