feat(password): add strength indicator

--- a/projects/angular/src/forms/styles/_password.clarity.scss
+++ b/projects/angular/src/forms/styles/_password.clarity.scss
@@ -6,8 +6,21 @@
  */
 
 @use 'variables.forms' as forms-variables;
+@use '../../styles/core/tokens/variables.tokens' as tokens;
+@use '../../styles/variables/variables.density' as density;
+
+clr-password-container
+  .clr-input-wrapper:has(input[clrPassword] ~ clr-progress-bar.clr-password-strength-bar)
+  + .clr-subtext {
+  margin-top: calc(tokens.$cds-global-space-3 + tokens.$cds-alias-object-border-width-200 + density.$clr-base-gap-xs);
+}
 
 .clr-input-wrapper input[clrPassword] {
+  & ~ clr-progress-bar.clr-password-strength-bar {
+    position: absolute;
+    bottom: calc(-1 * calc(tokens.$cds-global-space-3 + tokens.$cds-alias-object-border-width-200));
+  }
+
   & + button.clr-input-group-icon-action {
     .clr-password-eye-icon {
       color: forms-variables.$clr-forms-password-eye-icon-color;
