--- a/projects/angular/src/data/datagrid/_variables.datagrid.scss
+++ b/projects/angular/src/data/datagrid/_variables.datagrid.scss
@@ -70,6 +70,7 @@ $clr-datagrid-detail-pane-close-icon-size: var(--clr-datagrid-detail-pane-close-
 $clr-datagrid-detail-body-text-color: var(--clr-datagrid-detail-body-text-color) !default;
 $clr-datagrid-detail-header-title-color: var(--clr-datagrid-detail-header-title-color) !default;
 $clr-datagrid-detail-pane-bg-color: var(--clr-datagrid-detail-pane-bg-color) !default;
+$clr-datagrid-detail-pane-open-row-bg-color: var(--clr-datagrid-detail-pane-open-row-bg-color) !default;
 $clr-datagrid-detail-pane-border-color: var(--clr-datagrid-detail-pane-border-color) !default;
 
 $clr-datagrid-placeholder-font-size: var(--clr-datagrid-placeholder-font-size) !default;
