feat(datagrid): remove opened row detail anchor and use background color only (#2152)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [x] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [ ] Bugfix
- [x] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

Angled border identifies open detail in addition to the icon button.

Issue Number: CDE-3002

## What is the new behavior?

Row background identifies open detail in addition to the icon button.

## Does this PR introduce a breaking change?

- [x] Yes
- [ ] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->
BREAKING CHANGE:
- It's a visual style change that may affect visual regression tests.
Visual tests will need to be updated.



## Other information

---------

Co-authored-by: GitHub <noreply@github.com>

--- a/projects/angular/src/data/datagrid/_properties.datagrid.scss
+++ b/projects/angular/src/data/datagrid/_properties.datagrid.scss
@@ -89,6 +89,7 @@
       --clr-datagrid-detail-body-text-color: #{tokens.$cds-alias-typography-color-400};
       --clr-datagrid-detail-header-title-color: #{tokens.$cds-alias-typography-color-400};
       --clr-datagrid-detail-pane-bg-color: #{tokens.$cds-alias-object-container-background};
+      --clr-datagrid-detail-pane-open-row-bg-color: #{tokens.$cds-alias-object-interaction-background-active};
       --clr-datagrid-detail-pane-border-color: #{tokens.$cds-alias-object-border-color};
       --clr-datagrid-placeholder-background-color: #{tokens.$cds-alias-object-container-background};
       --clr-datagrid-popovers-box-shadow: #{tokens.$cds-alias-object-shadow-100};
