--- a/projects/angular/src/popover/dropdown/_dropdown.clarity.scss
+++ b/projects/angular/src/popover/dropdown/_dropdown.clarity.scss
@@ -172,7 +172,7 @@
       }
 
       &:focus {
-        outline-offset: calc(-1 * tokens.$cds-global-space-2);
+        @include menu-mixins.dropdown-item-outline();
       }
     }
 
