--- a/projects/angular/src/popover/dropdown/_menu-mixins.clarity.scss
+++ b/projects/angular/src/popover/dropdown/_menu-mixins.clarity.scss
@@ -124,3 +124,8 @@
     padding: density.$clr-base-vertical-offset-s density.$clr-base-horizontal-offset-2xl;
   }
 }
+@mixin dropdown-item-outline() {
+  outline: #{tokens.$cds-alias-object-interaction-outline};
+  outline: #{tokens.$cds-alias-object-interaction-outline-webkit};
+  outline-offset: calc(-1 * tokens.$cds-global-space-2);
+}
